--- a/content/index.html
+++ b/content/index.html
@@ -72,7 +72,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section> <a href='CMSimfly 網站.html'>Next</a> >> CMSimfly 網站<br /><h1>簡介</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='簡介.html'>簡介</a><ul><li><a href='2018 Fa11 s40723146 分組網站.html'>2018 Fa11 s40723146 分組網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='組員操作影片.html'>組員操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 手冊.html'>OnShape 手冊</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section> <a href='2018 Fa11 s40723146 分組網站.html'>Next</a> >> 2018 Fa11 s40723146 分組網站<br /><h1>簡介</h1>
 <p>2018 Fall 計算機程式與電腦輔助設計實習課程分組網站</p>
 <p>本倉儲位於:  <a href="https://github.com/mdecourse/2018fall">https://github.com/mdecourse/2018fall</a> </p>
 <p>本倉儲包含:</p>
@@ -94,4 +94,5 @@ $(function(){
 <p>管理者可以利用 <a href="http://leoeditor.com/">Leo Editor</a> 開啟位於 config/reveal.leo 進行簡報內容的編輯.</p>
 <h4>Pelican 靜態網誌轉換系統</h4>
 <p><a href="https://blog.getpelican.com/">https://blog.getpelican.com/</a> 是一套利用 Python 建立的靜態網誌轉換系統, 在本倉儲中, 能夠將使用者儲存於 markdown 目錄中的 .md 檔案, 配合設定檔, 轉為位於 blog 目錄中的靜態網誌檔案.</p>
-<p></p><br /> <a href='CMSimfly 網站.html'>Next</a> >> CMSimfly 網站</section></div></body></html>
+<p></p>
+<br /> <a href='2018 Fa11 s40723146 分組網站.html'>Next</a> >> 2018 Fa11 s40723146 分組網站</section></div></body></html>
