--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,7 +39,8 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## 2018Fall 分組網際簡報
+## 2018Fall s40723146 
+## 分組網際簡報
 
 ### 虎科大機械設計工程系
 
@@ -65,6 +66,16 @@ Created by [KMOLab](http://lab.kmol.info/)
 * 按 o 鍵可以切換單張或全域檢視 (overview)
 * 按 b 或 . 鍵可以切換螢幕黑屏 (black)
 * 按 Esc 可以退出全螢幕或全域檢視 (Escape)
+
+    </script>
+</section>
+
+
+						
+<section data-markdown>
+    <script type="text/template">
+# 四種語言
+## 計算機 網路 英文 數學
 
     </script>
 </section>
