reveal and blog update

--- a/config/content.htm
+++ b/config/content.htm
@@ -20,10 +20,8 @@
 <p>管理者可以利用 <a href="http://leoeditor.com/">Leo Editor</a> 開啟位於 config/reveal.leo 進行簡報內容的編輯.</p>
 <h4>Pelican 靜態網誌轉換系統</h4>
 <p><a href="https://blog.getpelican.com/">https://blog.getpelican.com/</a> 是一套利用 Python 建立的靜態網誌轉換系統, 在本倉儲中, 能夠將使用者儲存於 markdown 目錄中的 .md 檔案, 配合設定檔, 轉為位於 blog 目錄中的靜態網誌檔案.</p>
-<p></p>
-<h2>2018 Fa11 s40723146 分組網站</h2>
-<p><a href="https://www.google.com.tw/">google</a></p>
-<p><a href="https://www.google.com.tw/"><img alt="" height="180" src="/images/Google-logo_1.jpg" width="343"/></a></p><h2>reveal 投影片</h2>
+<p></p><h2>CMSimfly 網站</h2>
+<p>各組必須自行更改 Config 中的網站標題, 且每次完成近端動態網頁編輯後, 以 generate_pages 按鈕, 將動態網頁資料轉為靜態網頁資料, 之後再新增、提交並推送到遠端倉儲.</p><h2>reveal 投影片</h2>
 <p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/reveal.leo</p><h2>pelican 網誌</h2>
 <p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/pelican.leo </p>
 <p>各分組必須自行更改 @edit pelicanconf.py 中的 AUTHOR 與 SITENAME</p>
