readme and reveal url update

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -48,7 +48,10 @@
 Created by [KMOLab](http://lab.kmol.info/)
 </small>
 
-[2018 Fall 分組網誌](./../blog/index.html)
+[2018 Fall 分組網誌](https://s40723146.github.io/s40723146/blog/index.html)
+
+
+[個人倉儲](https://s40723146.github.io/s40723146/content/index.html)
 
 
     </script>
